# asai

./: .gitignore  CHANGELOG.markdown  CONTRIBUTING.markdown  CONTRIBUTORS.markdown  README.md  asai-examples.opam  asai-lsp.opam  asai.opam  asai.opam.template  dune  dune-project  index.html  kai.opam  kai.opam.template
.github/workflows/: ocaml.yaml
asai/: design.html  index.html  quickstart.html
asai-examples/: index.html
asai-examples/Syslib/: index.html
asai-examples/Syslib/Operations/: index.html
asai-examples/Syslib/Reporter/: index.html
asai-examples/Syslib/Reporter/Message/: index.html
asai-lsp/: index.html
asai-lsp/Asai_lsp/: index.html
asai-lsp/Asai_lsp/Make/: index.html
asai-lsp/Asai_lsp/Make/argument-1-Message/: index.html
asai/Asai/: index.html
asai/Asai/Diagnostic/: index.html
asai/Asai/Explication/: index.html
asai/Asai/Explicator/: index.html
asai/Asai/Explicator/Make/: index.html
asai/Asai/Explicator/Make/argument-1-Tag/: index.html
asai/Asai/Explicator/module-type-S/: index.html
asai/Asai/Explicator/module-type-S/Tag/: index.html
asai/Asai/Explicator/module-type-Tag/: index.html
asai/Asai/GitHub/: index.html
asai/Asai/GitHub/Make/: index.html
asai/Asai/GitHub/Make/argument-1-Message/: index.html
asai/Asai/MinimumSigs/: index.html
asai/Asai/MinimumSigs/module-type-Message/: index.html
asai/Asai/MinimumSigs/module-type-Reporter/: index.html
asai/Asai/MinimumSigs/module-type-Reporter/Message/: index.html
asai/Asai/Range/: index.html
asai/Asai/Reporter/: index.html
asai/Asai/Reporter/Make/: index.html
asai/Asai/Reporter/Make/argument-1-Message/: index.html
asai/Asai/Reporter/module-type-Message/: index.html
asai/Asai/Reporter/module-type-S/: index.html
asai/Asai/Reporter/module-type-S/Message/: index.html
asai/Asai/SourceReader/: index.html
asai/Asai/StructuredReporter/: index.html
asai/Asai/StructuredReporter/Make/: index.html
asai/Asai/StructuredReporter/Make/argument-1-Message/: index.html
asai/Asai/StructuredReporter/module-type-Message/: index.html
asai/Asai/StructuredReporter/module-type-S/: index.html
asai/Asai/Tty/: index.html
asai/Asai/Tty/Make/: index.html
docs/: design.mld  dune  index.mld  quickstart.mld
examples/adopt/app/: App.ml  Logger.ml  Reporter.ml  dune
examples/adopt/lib/: Operations.ml  Reporter.ml  Syslib.ml  Syslib.mli  dune
examples/adopt/syslib/: Logger.ml  Operations.ml  Syslib.ml
examples/stlc/: Checker.ml  Doctor.ml  ErrorCode.ml  ErrorLogger.ml  Grammar.mly  Lex.mll  Reporter.ml  STLC.ml  Stlc.ml  Syntax.ml  asai-stlc-lsp.el  dune  dune.disabled  example.lambda  example2.lambda
lsp/: Effects.mli  Kai_lsp.ml  LspEio.ml  Notification.ml  Request.ml  Request.mli  dune
src/: Asai.ml  Asai.mli  Debugger.ml  Debugger.mli  DebuggerSigs.ml  Diagnostic.ml  Diagnostic.mli  DiagnosticData.ml  Diagnostic_data.ml  Effects.ml  Effects.mli  Explanation.ml  Explanation_sigs.ml  Explication.ml  Explication.mli  ExplicationData.ml  Explicator.ml  Explicator.mli  ExplicatorData.ml  ExplicatorSigs.ml  Flattener.ml  Flattener.mli  GitHub.ml  GitHub.mli  Github.ml  LibSigs.ml  Loc.ml  Location.ml  Location_sigs.ml  Loctext.ml  Loctext.mli  Loctext_sigs.ml  Logger.ml  Logger.mli  LoggerSigs.ml  MarkedSource.ml  MarkedSource.mli  MarkedSourceData.ml  Marked_source.ml  Marked_source.mli  (+45 more)
src-lsp/: Asai_lsp.ml  Asai_lsp.mli  LspServer.ml  LspServer.mli  LspShims.ml  LspShims.mli  Lsp_server.ml  Lsp_server.mli  Lsp_shims.mli  dune
src/compile/: Asai_compile.ml  Asai_compile.mli  FileMapper.ml  FileMapper.mli  FileState.ml  FileState.mli  FlattenSpans.ml  Flattened.ml  Flatter.ml  Marked.ml  MarkedText.ml  Marker.ml  Marker.mli  ScannerState.ml  ScannerState.mli  State.ml  dune
src/compile/flatter/: FileFlatter.ml  FlatterState.mli  OrderedPosition.ml
src/core/: Accumulator.ml  Asai.ml  Asai.mli  Code.ml  Context.ml  Contextualize.ml  Contextualize.mli  Diagnostic.ml  Diagnostic.mli  DiagnosticBuilder.ml  DiagnosticBuilder.mli  DiagnosticData.ml  DiagnosticSigs.ml  Effects.ml  Effects.mli  ErrorCode.ml  Explicated.ml  Explicator.ml  Explicator.mli  ExplicatorData.ml  ExplicatorSigs.ml  Flattener.ml  Flattener.mli  GitHub.ml  GitHub.mli  Loc.ml  Loc.mli  Logger.ml  Logger.mli  LoggerSigs.ml  Phase.ml  Severity.ml  Span.ml  Span.mli  Utils.ml  dune
src/core/effects/: DiagnosticBuilder.mli  LoggerBase.ml  LoggerBase.mli
src/core/logger/: DiagnosticBuilder.ml  DiagnosticBuilder.mli  DiagnosticBuilderSigs.ml  DiagnosticEmitter.ml  DiagnosticEmitter.mli  DiagnosticEmitterSigs.ml  LoggerBase.mli
src/file/: Asai_file.ml  Asai_file.mli  Assembler.ml  Assembler.mli  Contextualize.ml  Contextualize.mli  FileReader.mli  Flattened.ml  Flattener.ml  Flattener.mli  Flatter.ml  Flatter.mli  Marked.ml  MarkedDiagnostic.ml  Marker.ml  Marker.mli  Reader.ml  Reader.mli  SectionFlattener.ml  SectionFlattener.mli  dune
src/file/flattener/: FlattenerState.ml  FlattenerState.mli  SectionFlattener.ml  SectionFlattener.mli
src/file/flatter/: PerFileFlatter.ml  PerFileFlatter.mli
src/lsp/: AsaiLsp.ml  AsaiLsp.mli  Asai_lsp.ml  Asai_lsp.mli  Effects.ml  Effects.mli  Kai_lsp.ml  LspEio.ml  LspEio.mli  LspServer.ml  LspServer.mli  LspShims.ml  LspShims.mli  Notification.ml  Notification.mli  Request.ml  Request.mli  Server.ml  Server.mli  Shims.ml  Shims.mli  dune  dune.disabled
src/tty/: Ansi.ml  Asai_tty.ml  Asai_tty.mli  FileReader.ml  FileReader.mli  Tty.ml  Tty.mli  TtyStyle.ml  TtyTag.ml  TtyTagSet.ml  Tty_style.ml  Tty_tag.ml  Tty_tag_set.ml  UserContent.ml  dune
src/unix/: Asai_unix.ml  Asai_unix.mli  Kai_unix.ml  Kai_unix.mli  dune  dune.disabled
test/: IntTag.ml  Int_tag.ml  LocTests.ml  README.markdown  Test.ml  TestDiagnostic.ml  TestExplicator.ml  TestFlattener.ml  TestRangeFlattener.ml  TestSourceMarker.ml  TestSourceUtils.ml  TestStringUtils.ml  TestText.ml  TestTty.expected  TestTty.ml  TestTtyInteract.ml  TestUserContent.ml  Test_range_flattener.ml  Test_source_marker.ml  Test_string_utils.ml  Test_tty.expected  dune  dune.disabled  kai.ml
(+2 files in other folders)
