(tests
 (names TestSourceMarker TestRangeFlattener)
 (modules TestSourceMarker TestRangeFlattener IntTag)
 (libraries asai alcotest))

(tests
 (names TestSourceUtils TestText)
 (modules TestSourceUtils TestText)
 (libraries asai alcotest))

(test
 (name TestTty)
 (modules TestTty)
 (libraries asai))
