(tests
 (names TestSourceMarker TestRangeFlattener)
 (modules TestSourceMarker TestRangeFlattener IntTag)
 (libraries asai alcotest))

(tests
 (names TestStringUtils TestText)
 (modules TestStringUtils TestText)
 (libraries asai alcotest))

(test
 (name TestTty)
 (modules TestTty)
 (libraries asai))
