(tests
 (names Test_source_marker Test_range_flattener)
 (modules Test_source_marker Test_range_flattener Int_tag)
 (libraries asai alcotest))

(tests
 (names Test_string_utils Test_text)
 (modules Test_string_utils Test_text)
 (libraries asai alcotest))

(test
 (name Test_tty)
 (modules Test_tty)
 (libraries asai))
